# leptos_spa_gh_pages_template

./: .gitignore  404.html  Cargo.toml  index.html  mprocs.yaml  package.json
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
src/: lib.rs  main.rs
