[package]
name = "leptos_spa_gh_pages_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2.1"
leptos_router = { version = "0.2.1", features = ["csr"] }
console_error_panic_hook = "0.1.7"
console_log = "0.2"
log = "0.4"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }